tests: Use Path in FuzzTargetTestWrapper